Added  two more recipes and finished first release.

--- a/recipes/spaghetti_aglio_e_olio.html
+++ b/recipes/spaghetti_aglio_e_olio.html
@@ -7,6 +7,26 @@
     <title>Spaghetti aglio e olio</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Spaghetti aglio e olio</h1>
+    <img src="./img/spaghetti_aglio_e_olio.jpg" alt="A plate of delicious spaghetti as described in the recipe." style="width: 600px; height: 600px;">
+    <h3>An all time classic if you did not go to the groceries!</h3>
+    <p>An easy and quickly created symphony based on olive oil and pepper.</p>
+    <p>Enjoy the italian flair in a matter of minutes.</p>
+    <p></p>
+<h4>Ingredients</h4>
+<p></p>
+<div>
+    <ul>
+    <li>one pack of quality pasta (preferably spaghetti)</li>
+    <li>a considerable amount of olive oil (extra vergine and not the cheap stuff!)</li>
+    <li>sea salt (also not only a little bit</li>
+    <li>pepper (and please freshly grinded)</li>
+    <li>basil (The green, living plant. No dried stuff!) </li>
+    <li>some parmigiano reggiano</li>
+    <li>one fresh red chilly</li>
+    </ul>
+</div>
+<p></p>
+<p></p>
 </body>
 </html>
