First release commited.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin recipes</title>
 </head>
 <body>
     <h1> Odin recipes</h1>
-
+    <p></p>
+    <p></p>
+    <img src="./img/maggi-kochratgeber-pasta-arten.jpg" alt= "Variety of different pasta types">
+    <h3>Save the day with these easy and quick pasta dishes. Everybody loves pasta!</h3>
+    <p></p>
     <ul>
-        <li><link href="recipes/spaghetti_aglio_e_olio.html"></li>
+        <li><a href="recipes/spaghetti_aglio_e_olio.html"> Spaghetti aglio e olio</a></li>
+        <li><a href="recipes/pasta_al_limone.html"> Pasta al limone</a></li>
+        <li> <a href="recipes/cacio_e_pepe.html"> Cacio e pepe</a></li>
     </ul>
 </body>
 </html>
