--- a/recipes/spaghetti_aglio_e_olio.html
+++ b/recipes/spaghetti_aglio_e_olio.html
@@ -7,8 +7,8 @@
     <title>Spaghetti aglio e olio</title>
 </head>
 <body>
-    <h1>Spaghetti aglio e olio</h1>
-    <img src="./img/spaghetti_aglio_e_olio.jpg" alt="A plate of delicious spaghetti as described in the recipe." style="width: 600px; height: 600px;">
+    <h1 id="header">Spaghetti aglio e olio</h1>
+    <img src="../img/spaghetti-alio-e-olio.jpg" alt="A plate of delicious spaghetti as described in the recipe." style="width: 600px; height: 600px;">
     <h3>An all time classic if you did not go to the groceries!</h3>
     <p>An easy and quickly created symphony based on olive oil and pepper.</p>
     <p>Enjoy the italian flair in a matter of minutes.</p>
@@ -17,16 +17,33 @@
 <p></p>
 <div>
     <ul>
-    <li>one pack of quality pasta (preferably spaghetti)</li>
-    <li>a considerable amount of olive oil (extra vergine and not the cheap stuff!)</li>
-    <li>sea salt (also not only a little bit</li>
-    <li>pepper (and please freshly grinded)</li>
-    <li>basil (The green, living plant. No dried stuff!) </li>
-    <li>some parmigiano reggiano</li>
-    <li>one fresh red chilly</li>
+        <li>one pack of quality pasta (preferably spaghetti)</li>
+        <li>a considerable amount of olive oil (extra vergine and not the cheap stuff!)</li>
+        <li>sea salt (also not only a little bit)</li>
+        <li>pepper (and please freshly grinded)</li>
+        <li>basil (The green, living plant. No dried stuff!) </li>
+        <li>garlic (fresh for sure)</li>
+        <li>some parmigiano reggiano</li>
+        <li>one fresh red chilly</li>
     </ul>
 </div>
 <p></p>
 <p></p>
+<div>
+    <h4>Instructions</h4>
+    <ol>
+        <li>Boil some water, just enough, and season to taste with salt.</li>
+        <li>Add your spaghetti to the boiling water.</li>
+        <li>Preheat a pan and place a generous amount of oil in it. As soon as you can smell the olive oil, reduce the heat to a minimum.</li>
+        <li>In the meantime, cut the chilly in to fine slices. Having a sharp knive helps alot.</li>
+        <li>Do the same to the garlic and place both in the now hot olive oil.</li>
+        <li>Now your pasta should be al dente and you place it in the oil, too.</li>
+        <li>Season with freshly grinded pepper to taste and give it a good stir. Pro Tip: A splash of starchy pasta water gives it a twist and some creamy texture)</li>
+        <li>Now quickly chop the basil, place the pasta on a plate and garnish with basil and parmigiano.</li>
+    </ol>
+</div>
+<a href="#header">Return to top</a>
+<p></p>
+<a href="../index.html">Return to main page</a>
 </body>
 </html>
